// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
Project JARVIS_AI_AGENT{
  database_type: 'MySQL'
  Note: '''

## https://github.com/JGreyScales/JARVIS_AI_AGENT
## precomputed views

CREATE TABLE user_command_summary AS
SELECT u.userID, f.familyID, c.commandID, c.commandName, c.commandExecution
FROM Users u
JOIN UsersToFamilies uf ON u.userID = uf.userID
JOIN Families f ON uf.familyID = f.familyID
JOIN FamiliesToCommand fc ON f.familyID = fc.familyID
JOIN Commands c ON fc.commandID = c.commandID;

CREATE TABLE user_to_families AS
SELECT u.userID, f.familyID, f.familyName
FROM Users u
JOIN UsersToFamilies uf ON u.userID = uf.userID
JOIN Families f ON uf.familyID = f.familyID

CREATE TABLE families_to_commands AS
SELECT f.familyID, c.commandID, c.commandName, c.commandExecution
FROM Families f
JOIN FamiliesToCommand fc ON f.familyID = fc.familyID
JOIN Commands c ON fc.commandID = c.commandID;

CREATE TABLE gesture_to_command AS
SELECT g.*, c.commandName, c.commandExecution
FROM GestureData g
JOIN Commands c ON g.gestureDataID = c.commandID;


SET GLOBAL event_scheduler = ON;
CREATE EVENT refresh_user_command_summary
ON SCHEDULE EVERY 1 HOUR
DO
  BEGIN
    TRUNCATE TABLE user_command_summary;
    INSERT INTO user_command_summary
    SELECT u.userID, f.familyID, c.commandID, c.commandName, c.commandExecution
    FROM Users u
    JOIN UsersToFamilies uf ON u.userID = uf.userID
    JOIN Families f ON uf.familyID = f.familyID
    JOIN FamiliesToCommand fc ON f.familyID = fc.familyID
    JOIN Commands c ON fc.commandID = c.commandID;
  END;

CREATE EVENT refresh_user_to_families
ON SCHEDULE EVERY 1 HOUR
DO
  BEGIN
    TRUNCATE TABLE user_to_families;
    INSERT INTO user_to_families
    SELECT u.userID, f.familyID, f.familyName
    FROM Users u
    JOIN UsersToFamilies uf ON u.userID = uf.userID
    JOIN Families f ON uf.familyID = f.familyID;
  END;

CREATE EVENT refresh_families_to_commands
ON SCHEDULE EVERY 1 HOUR
DO
  BEGIN
    TRUNCATE TABLE families_to_commands;
    INSERT INTO families_to_commands
    SELECT f.familyID, c.commandID, c.commandName, c.commandExecution
    FROM Families f
    JOIN FamiliesToCommand fc ON f.familyID = fc.familyID
    JOIN Commands c ON fc.commandID = c.commandID;
  END;


CREATE EVENT refresh_gesture_to_command
ON SCHEDULE EVERY 1 HOUR
DO
  BEGIN
    TRUNCATE TABLE gesture_to_command;
    INSERT INTO gesture_to_command
    SELECT g.*, c.commandName, c.commandExecution
    FROM GestureData g
    JOIN Commands c ON g.commandID = c.commandID;
  END;

  '''
}

enum Action {
  userAction
  commandAction
  familyAction
}

enum ActionType {
  userUpdated
  userDeleted
  userCreated
  commandUpdated
  commandDeleted
  commandCreated
  commandExecuted
  familyUpdated
  familyDeleted
  familyCreated
}

Table JARVIS_AI_AGENT.Users {
  userID "integer unsigned" [pk, increment, ref: - JARVIS_AI_AGENT.Transcripts.invokerID]
  email varchar(254) [not null]
  name varchar(20) [not null]
  passwordHash char(32) [not null]
  created_at timestamp [not null, default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [not null, default: "CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP"]

  Note {
    '''
      PARTITION BY HASH (userID)
      PARTITIONS 4;
    '''
  }
  
  indexes {
    userID
    (userID, name)
    (email, passwordHash)
  }
}

Table JARVIS_AI_AGENT.Families {
  familyID "integer unsigned" [pk, increment, ref: - JARVIS_AI_AGENT.Transcripts.familyInvokedInID]
  familyName varchar(20) [not null, default: 'My Family']
  familySize "tinyint unsigned" [note: "GENERATED VIRTUAL AS ((SELECT COUNT(*) FROM JARVIS_AI_AGENT.UsersToFamilies WHERE familyID = Families.familyID))"]
  commandSize "tinyint unsigned" [note: "GENERATED VIRTUAL AS ((SELECT COUNT(*) FROM JARVIS_AI_AGENT.FamiliesToCommand WHERE familyID = FamiliesToCommand.familyID))"]
    created_at timestamp [not null, default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [not null, default: "CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP"]

  Note {
    '''
      PARTITION BY RANGE (familySize)
      PARTITION p1 VALUES LESS THAN (3),
      PARTITION p2 VALUES LESS THAN (7),
      PARTITION p3 VALUES LESS THAN (13),
      PARTITION p4 VALUES LESS THAN (MAXVALUE)
    '''
  }

  indexes {
    familyID
  }
}

Table JARVIS_AI_AGENT.Commands {
  commandID "integer unsigned" [pk, increment, ref: - JARVIS_AI_AGENT.Transcripts.commandInvokedID]
  commandName varchar(20) [not null]
  commandExecution varchar(500) [not null]
  created_at timestamp [not null, default: "CURRENT_TIMESTAMP"]
  updated_at timestamp [not null, default: "CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP"]

  Note {
    '''
      PARTITION BY HASH (commandID)
      PARTITIONS 4;
    '''
  }

  indexes {
    commandID
  }
}

Table JARVIS_AI_AGENT.GestureData {
  gestureDataID "integer unsigned" [PK]

    wrist VECTOR(3)

    thumbCarpometacarpal VECTOR(3)
    thumbMCP VECTOR(3)
    thumbIP VECTOR(3)
    thumbTip VECTOR(3)

    indexMCP VECTOR(3)
    indexPIP VECTOR(3)
    indexDIP VECTOR(3)
    indexTip VECTOR(3)

    middleMCP VECTOR(3)
    middlePIP VECTOR(3)
    middleDIP VECTOR(3)
    middleTip VECTOR(3)

    ringMCP VECTOR(3)
    ringPIP VECTOR(3)
    ringDIP VECTOR(3)
    ringTip VECTOR(3)

    pinkyMCP VECTOR(3)
    pinkyPIP VECTOR(3)
    pinkyDIP VECTOR(3)
    pinkyTip VECTOR(3)

  Note {
    '''
      PARTITION BY HASH (gestureDataID)
    '''
  }

  indexes {
    gestureDataID
  }
}

Table JARVIS_AI_AGENT.Transcripts {
  transcriptID "integer unsigned" [pk, increment]
  transcriptTime timestamp [not null, default: "CURRENT_TIMESTAMP"]
  action Action [not null]
  actionType ActionType [not null]
  invokerID "integer unsigned" [not null]
  familyInvokedInID "integer unsigned" [null]
  commandInvokedID "integer unsigned" [null]
  
  Note {
    '''
    PARTITION BY LIST (action_type) (
    PARTITION p0 VALUES IN ('userUpdated', 'userDeleted', 'userCreated'),
    PARTITION p1 VALUES IN ('commandUpdated', 'commandDeleted', 'commandCreated', 'commandExecuted'),
    PARTITION p2 VALUES IN ('familyUpdated', 'familyDeleted', 'familyCreated'));
    '''
  }

  indexes {
    invokerID
    familyInvokedInID
    commandInvokedID
  }
}

Table JARVIS_AI_AGENT.UsersToFamilies {
  userID "integer unsigned" [not null]
  familyID "integer unsigned" [not null]

  NOTE {
    '''
      PARTITION BY HASH (userID)
      PARTITIONS 4;
    '''
  }

  indexes {
    (userID, familyID)
  }
}

Table JARVIS_AI_AGENT.FamiliesToCommand {
  familyID "integer unsigned" [not null]
  commandID "integer unsigned" [not null]

  NOTE {
    '''
      PARTITION BY HASH (familyID)
      PARTITIONS 4;
    '''
  }

  indexes {
    (familyID, commandID)
  }
}

Ref: JARVIS_AI_AGENT.UsersToFamilies.userID > JARVIS_AI_AGENT.Users.userID [delete: cascade, update: no action]
Ref: JARVIS_AI_AGENT.UsersToFamilies.familyID > JARVIS_AI_AGENT.Families.familyID [delete: cascade, update: no action]
Ref: JARVIS_AI_AGENT.FamiliesToCommand.familyID > JARVIS_AI_AGENT.Families.familyID [delete: cascade, update: no action]
Ref: JARVIS_AI_AGENT.FamiliesToCommand.commandID > JARVIS_AI_AGENT.Commands.commandID [delete: cascade, update: no action]
Ref: JARVIS_AI_AGENT.Commands.commandID - JARVIS_AI_AGENT.GestureData.gestureDataID [delete: cascade, update: cascade]